# perpectiva-dados

./: .gitignore  Aprendendo_uv.ipynb  README.md  README2.md  main.py  pyproject.toml
Comandos Básicos/: Comandos Básicos.ipynb
Lab0/: Lab0_revisao1.ipynb  Lab0_revisao2.ipynb
Lab2/: Lab2.md
NPL/: introducao_pln.ipynb
PLN/: PLN.ipynb
Teste - uv/: Aprendendo_uv.ipynb  pyproject.toml
WebScrapping/: Noticias_CNNBrasil_Esportes.csv  WebScrapping - CNNBrasil.ipynb  pyproject.toml
WebScrapping/data/: noticia_0.json  noticia_1.json  noticia_10.json  noticia_100.json  noticia_1000.json  noticia_1001.json  noticia_1002.json  noticia_1003.json  noticia_1004.json  noticia_1005.json  noticia_1006.json  noticia_1007.json  noticia_1008.json  noticia_1009.json  noticia_101.json  noticia_1010.json  noticia_1011.json  noticia_1012.json  noticia_1013.json  noticia_1014.json  noticia_1015.json  noticia_1016.json  noticia_1017.json  noticia_1018.json  noticia_1019.json  noticia_102.json  noticia_1020.json  noticia_1021.json  noticia_1022.json  noticia_1023.json  noticia_1024.json  noticia_1025.json  noticia_1026.json  noticia_1027.json  noticia_1028.json  noticia_1029.json  noticia_103.json  noticia_1030.json  noticia_1031.json  noticia_1032.json  (+1960 more)
